Many code cleanups suggested by static analysis